upgraded version lol

--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Akachi Ogbonna; A Web, UI/UX and Visual Designer">
+    <meta name="keywords" content="Design, Designer, UI/UX, Visual, Graphic design">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Akachi Ogbonna - Say hello</title>
@@ -41,13 +43,13 @@
 
                 <div class="main-navbar">
                     <ul class="navbar__menu">
-                        <li class="navbar__list-item"><a href="https://www.dropbox.com/s/7e1xewr6rymzy6r/Akachi_Eunice_Ogbonna.pdf?dl=0"  target="_blank">resume</a></li>
+                        <li class="navbar__list-item"><a href="https://bit.ly/2Tbxcbp" target="_blank">resume</a></li>
                         <li class="navbar__list-item"><a href="work">work</a></li>
                         <li class="navbar__list-item"><a href="process">design process</a></li>
                         <li class="navbar__list-item menu-active"><a href="contact">contact</a></li>
                     </ul>
                 </div>
-                
+
                 <div class="mobile-navbar">
                     <div id="mobile-nav-trigger" class="mobile-navbar-trigger">
                         <span></span>
@@ -55,7 +57,7 @@
                         <span></span>
                     </div>
                     <ul class="mobile-navbar-menu" id="mobile-nav-menu">
-                        <li class="navbar__list-item"><a href="https://www.dropbox.com/s/7e1xewr6rymzy6r/Akachi_Eunice_Ogbonna.pdf?dl=0"  target="_blank">resume</a></li>
+                        <li class="navbar__list-item"><a href="https://bit.ly/2Tbxcbp" target="_blank">resume</a></li>
                         <li class="navbar__list-item"><a href="work">work</a></li>
                         <li class="navbar__list-item"><a href="process">design process</a></li>
                         <li class="navbar__list-item"><a href="contact">contact</a></li>
@@ -78,36 +80,48 @@
                 </p>
             </div>
         </div>
-        <div class="contact-item-con">
-            <div class="contact-item-wrap">
-                <div class="contact-item">
-                    <h2 class="contact-item--header">Stuff I like </h2>
-                    <p class="contact-item--text">
-                        I like cute things, food, pizza, Asian Dramas, Anime, the smell of coffee, organized spaces,
-                        drawing, art, reading,
-                        learning, Ice cream, cheese, good movies, random conversations, puzzles and just generally
-                        observing nature and random things. <br>
-                        I loveeee great music, EXO and Iron man.
-                    </p>
-                </div>
-                <div class="contact-item">
-                    <h2 class="contact-item--header">Get in Touch</h2>
-                    <p class="contact-item--text">
-                        Send me a <a class="contact-item--text-link" href="mailto:akachinonyerem.o@gmail.com">mail</a>
-                        or <a class="contact-item--text-link" href="https://twitter.com/akachinonyerem_">tweet</a> at
-                        me. You can also see what i’ve been up
-                        to
-                        on <a class="contact-item--text-link"
-                            href="https://www.instagram.com/akachinonyerem_/">instagram</a>, check out my <a
-                            class="contact-item--text-link" href="https://www.behance.net/akachinonyerem_">behance</a>
-                        profile and stuff I’ve written
-                        on
-                        <a class="contact-item--text-link" href="https://medium.com/@akachinonyerem_">medium</a>.
-                    </p>
+        <div class="work-contact-main-con">
+            <div class="contact-item-con">
+                <div class="contact-item-wrap">
+                    <div class="contact-item">
+                        <!-- <h2 class="contact-item--header">Stuff I like </h2> -->
+                        <!-- <p class="contact-item--text">
+                            I like cute things, food, pizza, Asian Dramas, Anime, the smell of coffee, organized spaces,
+                            drawing, art, reading,
+                            learning, Ice cream, cheese, good movies, random conversations, puzzles and just generally
+                            observing nature and random things. <br>
+                            I loveeee great music, EXO and Iron man.
+                        </p> -->
+                        <h2 class="contact-item--header">Skills / Tools </h2>
+                        <p class="contact-item--text">
+                            Visual Design • UI/UX Design • Illustration • Branding • Wire-framing • Prototyping • Adobe
+                            Photoshop • Adobe Illustrator • Figma • HTML5 • CSS3 •
+                            Invision Studio • Javascript
+                        </p>
+                    </div>
+                    <div class="contact-item">
+                        <h2 class="contact-item--header">Get in Touch</h2>
+                        <p class="contact-item--text">
+                            Send me a <a class="contact-item--text-link"
+                                href="mailto:akachinonyerem.o@gmail.com">mail</a>
+                            or <a class="contact-item--text-link" href="https://twitter.com/akachinonyerem_">tweet</a>
+                            at
+                            me. You can also see what i’ve been up
+                            to
+                            on <a class="contact-item--text-link"
+                                href="https://www.instagram.com/akachinonyerem_/">instagram</a>, check out my <a
+                                class="contact-item--text-link"
+                                href="https://www.behance.net/akachinonyerem_">behance</a>
+                            profile and stuff I’ve written
+                            on
+                            <a class="contact-item--text-link" href="https://medium.com/@akachinonyerem_">medium</a>.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </body>
 <script type="text/javascript" src="js/script.js"></script>
+
 </html>
