--- a/domicilio.html
+++ b/domicilio.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Akachi Ogbonna; A Web, UI/UX and Visual Designer">
+    <meta name="keywords" content="Design, Designer, UI/UX, Visual, Graphic design">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Akachi Ogbonna - see my work!</title>
@@ -41,7 +43,7 @@
 
                 <div class="main-navbar">
                     <ul class="navbar__menu">
-                        <li class="navbar__list-item"><a href="https://www.dropbox.com/s/7e1xewr6rymzy6r/Akachi_Eunice_Ogbonna.pdf?dl=0"  target="_blank">resume</a></li>
+                        <li class="navbar__list-item"><a href="https://bit.ly/2Tbxcbp" target="_blank">resume</a></li>
                         <li class="navbar__list-item menu-active"><a href="work">work</a></li>
                         <li class="navbar__list-item"><a href="process">design process</a></li>
                         <li class="navbar__list-item"><a href="contact">contact</a></li>
@@ -55,7 +57,7 @@
                         <span></span>
                     </div>
                     <ul class="mobile-navbar-menu" id="mobile-nav-menu">
-                        <li class="navbar__list-item"><a href="https://www.dropbox.com/s/7e1xewr6rymzy6r/Akachi_Eunice_Ogbonna.pdf?dl=0"  target="_blank">resume</a></li>
+                        <li class="navbar__list-item"><a href="https://bit.ly/2Tbxcbp" target="_blank">resume</a></li>
                         <li class="navbar__list-item"><a href="work">work</a></li>
                         <li class="navbar__list-item"><a href="process">design process</a></li>
                         <li class="navbar__list-item"><a href="contact">contact</a></li>
@@ -69,20 +71,27 @@
         </div>
 
         <div class="work-type-box">
-            <h2 class="work-type">Simple branding, 2018</h2>
+            <h2 class="work-type">Branding, 2018</h2>
         </div>
 
         <div class="project-section">
             <div class="project-desc-box">
                 <p class="project-desc-text">
-                    The word ‘domicilio’ is spanish for ‘home’. The domicilio logo was designed for a house search
-                    engine platform. While trying not be cliché with the ‘house’ icons, using negative space we can
-                    make a home figure with the word ‘domicilio’.
-
+                    Domicilio is a house search engine platform. I used wordmark style for the logo. I used negative
+                    space to make a house out of the word 'domicilio'.
                 </p>
                 <br>
                 <p class="project-desc-text">
-                    <i style="font-style: italic;"> Theres literally a home there. </i>
+                    <i style="font-style: italic;"> If you look, you'll see a house there </i>
+                </p>
+                <br>
+                <p class="project-desc-text">
+                    I chose the colour and font style because they're adaptable, modern and exciting. It also matched
+                    the client request.
+                </p>
+                <br>
+                <p class="project-desc-text">
+                    <i style="font-style: italic;">You'll always find a home in domicilio </i>
                 </p>
             </div>
 
@@ -113,6 +122,7 @@
             </div>
 
             <div class="next-project">
+                <a class="next-project-item" href="/insightful">previous project</a>
                 <a class="next-project-item" href="/maptrack">next project</a>
             </div>
         </div>
@@ -120,4 +130,5 @@
     </div>
 </body>
 <script type="text/javascript" src="js/script.js"></script>
+
 </html>
