--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Akachi Ogbonna; A Web, UI/UX and Visual Designer">
+    <meta name="keywords" content="Design, Designer, UI/UX, Visual, Graphic design">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Akachi Ogbonna</title>
@@ -41,7 +43,7 @@
 
                 <div class="main-navbar">
                     <ul class="navbar__menu">
-                        <li class="navbar__list-item"><a href="https://www.dropbox.com/s/7e1xewr6rymzy6r/Akachi_Eunice_Ogbonna.pdf?dl=0"  target="_blank">resume</a></li>
+                        <li class="navbar__list-item"><a href="https://bit.ly/2Tbxcbp" target="_blank">resume</a></li>
                         <li class="navbar__list-item"><a href="work">work</a></li>
                         <li class="navbar__list-item"><a href="process">design process</a></li>
                         <li class="navbar__list-item"><a href="contact">contact</a></li>
@@ -55,7 +57,7 @@
                         <span></span>
                     </div>
                     <ul class="mobile-navbar-menu" id="mobile-nav-menu">
-                        <li class="navbar__list-item"><a href="https://www.dropbox.com/s/7e1xewr6rymzy6r/Akachi_Eunice_Ogbonna.pdf?dl=0"  target="_blank">resume</a></li>
+                        <li class="navbar__list-item"><a href="https://bit.ly/2Tbxcbp" target="_blank">resume</a></li>
                         <li class="navbar__list-item"><a href="work">work</a></li>
                         <li class="navbar__list-item"><a href="process">design process</a></li>
                         <li class="navbar__list-item"><a href="contact">contact</a></li>
@@ -64,26 +66,37 @@
             </nav>
         </div>
 
-        <div class="header-container home-bg">
+        <div class="header-container">
+            <div class="home-bg">
+            </div>
+
             <div class="header">
                 <h1 class="header-title-text">
-                    Hi! I’m kachi.
+                    Hey! I'm 'Kachi.
                 </h1>
                 <p class="header-text ">
-                    I’m a designer with two years experience in graphic, visual and UI/UX design.
-                </p>
-                <p class="header-text ">
-                    I use HTML5 & CSS3 to build websites and I'm a huge advocate of user research because it
-                    helps make better informed designs.
+                    I am a designer... Jack of most fields, Master of some. I refuse to limit myself to one creative field.
                 </p>
                 <p class="header-text">
-                    I also work well with Figma, Illustrator and Photoshop.
+                    Since I started designing, I have helped design brands, ads, websites and mobile apps.
+                </p>
+                <p class="header-text">
+                    I love learning new and exciting things and improving my craft but most of all, I'm a person who
+                    likes to have fun. I also enjoy photography and listening to good music.
                 </p>
 
-                <button onclick="window.location.href = '/work';" class="header-btn">see my work</button>
+                <p class="header-text">
+                    I like food, k-drama, the smell of coffee, organised spaces, drawing and books. I also like EXO,
+                    iron man, random conversations, puzzles and generally observing things.
+                </p>
+
+                <div class="header-btn-wrapper">
+                    <button onclick="window.location.href = '/work';" class="header-btn">see my work</button>
+                </div>
             </div>
         </div>
     </div>
 </body>
 <script type="text/javascript" src="js/script.js"></script>
+
 </html>
