--- a/insightful.html
+++ b/insightful.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Akachi Ogbonna; A Web, UI/UX and Visual Designer">
+    <meta name="keywords" content="Design, Designer, UI/UX, Visual, Graphic design">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Akachi Ogbonna - see my work!</title>
@@ -41,7 +43,8 @@
 
                 <div class="main-navbar">
                     <ul class="navbar__menu">
-                        <li class="navbar__list-item"><a href="https://www.dropbox.com/s/7e1xewr6rymzy6r/Akachi_Eunice_Ogbonna.pdf?dl=0"  target="_blank"href="">resume</a></li>
+                        <li class="navbar__list-item"><a href="https://bit.ly/2Tbxcbp" target="_blank"
+                                href="">resume</a></li>
                         <li class="navbar__list-item menu-active"><a href="work">work</a></li>
                         <li class="navbar__list-item"><a href="process">design process</a></li>
                         <li class="navbar__list-item"><a href="contact">contact</a></li>
@@ -55,7 +58,8 @@
                         <span></span>
                     </div>
                     <ul class="mobile-navbar-menu" id="mobile-nav-menu">
-                        <li class="navbar__list-item"><a href="https://www.dropbox.com/s/7e1xewr6rymzy6r/Akachi_Eunice_Ogbonna.pdf?dl=0"  target="_blank"href="">resume</a></li>
+                        <li class="navbar__list-item"><a href="https://bit.ly/2Tbxcbp" target="_blank"
+                                href="">resume</a></li>
                         <li class="navbar__list-item"><a href="work">work</a></li>
                         <li class="navbar__list-item"><a href="process">design process</a></li>
                         <li class="navbar__list-item"><a href="contact">contact</a></li>
@@ -69,23 +73,36 @@
         </div>
 
         <div class="work-type-box">
-            <h2 class="work-type">Simple branding, 2018</h2>
+            <h2 class="work-type">Branding, 2018</h2>
         </div>
 
         <div class="project-section">
             <div class="project-desc-box">
-                <p class="project-desc-text">Insightful is a facebook mesenger bot that returns mortgage information
-                    about home addresses in
-                    America. I designed the logo while thinking about the meaning of the word as well as the purpose of
-                    the bot. It's a special kind of eye.
+                <p class="project-desc-text">
+                    Insightful is a facebook messenger bot. It returns mortgage information about home addresses in
+                    America.
                 </p>
                 <br>
+                <p class="project-desc-text">
+                    I designed the logo while thinking about the meaning of the word as well as the purpose of the bot.
+                    <i style="font-style: italic;">It's a special kind of eye</i>.
+                </p>
+                <br>
+                <p class="project-desc-text">
+                    I used the combination-style because its flexible, adaptable and versatile. Since it was something
+                    simple, I decided to go for a cleaner look.
+                </p>
+                <br>
+                <p class="project-desc-text">
+                    I chose a typeface that matched with the logo style. It's friendly and easy to read and will make the bot more appealing.
+                    I used the colour that was already in use by the product.
+                </p>
                 <br>
                 <p class="project-desc-text">
                     <strong>insightful</strong><br>
                     <i style="font-style: italic;">adjective</i><br>
                     having or showing an accurate and deep
-                    understanding; perceptive
+                    understanding;
                 </p>
             </div>
 
@@ -111,11 +128,13 @@
                 </div>
             </div>
             <div class="next-project">
-                <a class="next-project-item" href="/domicilio.html">next project</a>
+                <a class="next-project-item" href="/maptrack">previous project</a>
+                <a class="next-project-item" href="/domicilio">next project</a>
             </div>
         </div>
 
     </div>
 </body>
 <script type="text/javascript" src="js/script.js"></script>
+
 </html>
