--- a/maptrack.html
+++ b/maptrack.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Akachi Ogbonna; A Web, UI/UX and Visual Designer">
+    <meta name="keywords" content="Design, Designer, UI/UX, Visual, Graphic design">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Akachi Ogbonna - see my work!</title>
@@ -41,7 +43,7 @@
 
                 <div class="main-navbar">
                     <ul class="navbar__menu">
-                        <li class="navbar__list-item"><a href="https://www.dropbox.com/s/7e1xewr6rymzy6r/Akachi_Eunice_Ogbonna.pdf?dl=0"  target="_blank">resume</a></li>
+                        <li class="navbar__list-item"><a href="https://bit.ly/2Tbxcbp" target="_blank">resume</a></li>
                         <li class="navbar__list-item menu-active"><a href="work">work</a></li>
                         <li class="navbar__list-item"><a href="process">design process</a></li>
                         <li class="navbar__list-item"><a href="contact">contact</a></li>
@@ -55,7 +57,7 @@
                         <span></span>
                     </div>
                     <ul class="mobile-navbar-menu" id="mobile-nav-menu">
-                        <li class="navbar__list-item"><a href="https://www.dropbox.com/s/7e1xewr6rymzy6r/Akachi_Eunice_Ogbonna.pdf?dl=0"  target="_blank">resume</a></li>
+                        <li class="navbar__list-item"><a href="https://bit.ly/2Tbxcbp" target="_blank">resume</a></li>
                         <li class="navbar__list-item"><a href="work">work</a></li>
                         <li class="navbar__list-item"><a href="process">design process</a></li>
                         <li class="navbar__list-item"><a href="contact">contact</a></li>
@@ -75,10 +77,23 @@
         <div class="project-section">
             <div class="project-desc-box">
                 <p class="project-desc-text">
-                    For Maptrack, It was majorly a re-brand as well as a re-design of the the dashboard user
-                    interface.
-                    In-between, I designed Ads and a lot of other random things!
-
+                    For Maptrack, It was a logo re-brand project as well as a re-design of the the dashboard user
+                    interface. In-between, I designed Ads and a lot of other random things!
+                </p>
+                <br>
+                <p class="project-desc-text">
+                    MapTrack wanted to keep using the 'map pin' as the icon. The old logo was pink & blue and it lacked
+                    consistency. Maptrack's goal for the new logo was "professional, safe, trustworthy and secure".
+                </p>
+                <br>
+                <p class="project-desc-text">
+                    Based on the aim of the brand and colour psychology, I created a palette of new colours. Blue
+                    generally represents trust, security & professionalism. Green also represents safety.
+                </p>
+                <br>
+                <p class="project-desc-text">
+                    For the typeface, I chose font that are easy to read and fonts that match with the goal of the
+                    rebrand.
                 </p>
             </div>
 
@@ -115,11 +130,13 @@
                 <img src="img/mt-acct-redesigned.png" alt="">
             </div>
             <div class="next-project">
-                <a class="next-project-item" href="/work">see all projects</a>
+                <a class="next-project-item" href="/domicilio">previous project</a>
+                <a class="next-project-item" href="/insightful">next project</a>
             </div>
         </div>
 
     </div>
 </body>
 <script type="text/javascript" src="js/script.js"></script>
+
 </html>
