--- a/process.html
+++ b/process.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Akachi Ogbonna; A Web, UI/UX and Visual Designer">
+    <meta name="keywords" content="Design, Designer, UI/UX, Visual, Graphic design">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Akachi Ogbonna - design process</title>
@@ -41,7 +43,7 @@
 
                 <div class="main-navbar">
                     <ul class="navbar__menu">
-                        <li class="navbar__list-item"><a href="https://www.dropbox.com/s/7e1xewr6rymzy6r/Akachi_Eunice_Ogbonna.pdf?dl=0"  target="_blank">resume</a></li>
+                        <li class="navbar__list-item"><a href="https://bit.ly/2Tbxcbp" target="_blank">resume</a></li>
                         <li class="navbar__list-item"><a href="work">work</a></li>
                         <li class="navbar__list-item menu-active"><a href="process">design process</a></li>
                         <li class="navbar__list-item"><a href="contact">contact</a></li>
@@ -55,7 +57,7 @@
                         <span></span>
                     </div>
                     <ul class="mobile-navbar-menu" id="mobile-nav-menu">
-                        <li class="navbar__list-item"><a href="https://www.dropbox.com/s/7e1xewr6rymzy6r/Akachi_Eunice_Ogbonna.pdf?dl=0"  target="_blank">resume</a></li>
+                        <li class="navbar__list-item"><a href="https://bit.ly/2Tbxcbp" target="_blank">resume</a></li>
                         <li class="navbar__list-item"><a href="work">work</a></li>
                         <li class="navbar__list-item"><a href="process">design process</a></li>
                         <li class="navbar__list-item"><a href="contact">contact</a></li>
@@ -63,23 +65,24 @@
                 </div>
             </nav>
         </div>
-        <div class="header-container process-bg">
+        <div class="header-container">
+
+            <div class="process-bg">
+            </div>
+
             <div class="header">
                 <h1 class="header-title-text">
-                    My design Process
+                    My Design Process
                 </h1>
                 <p class="header-text">
-                    The first thing I do is to understand the problem. Then I research the problem. If the solution
-                    involves an audience, I try to understand the audience and their perceived pain points too.
+                    Understanding the problem and the audience is the first thing I do. After which I make research.
+                    This helps me come up with better solutions. I then analyse the findings and use them to offer
+                    solution.
                 </p>
                 <p class="header-text">
-                    I analyze findings and use these findings to offer solution. I rethink and rework the solution to
-                    improve it.
-                </p>
-                <p class="header-text">
-                    Next step is reviewing and testing; using feedback and improve the solution before publishing it
-                    for everyone to use... because design isn't just color and pixels, it's about solving a problem and
-                    making life just a little bit better.
+                    Next step is reviewing and testing. I use the feedback received to improve the solution before
+                    publishing it for everyone to use because design isn't just colour and pixels... it's about solving
+                    a problem and making life better.
                 </p>
 
                 <!-- <button class="header-btn">see my work</button> -->
@@ -88,4 +91,5 @@
     </div>
 </body>
 <script type="text/javascript" src="js/script.js"></script>
+
 </html>
