--- a/work.html
+++ b/work.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Akachi Ogbonna; A Web, UI/UX and Visual Designer">
+    <meta name="keywords" content="Design, Designer, UI/UX, Visual, Graphic design">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Akachi Ogbonna - see my work!</title>
@@ -42,7 +44,7 @@
 
                 <div class="main-navbar">
                     <ul class="navbar__menu">
-                        <li class="navbar__list-item"><a href="https://www.dropbox.com/s/7e1xewr6rymzy6r/Akachi_Eunice_Ogbonna.pdf?dl=0"  target="_blank">resume</a></li>
+                        <li class="navbar__list-item"><a href="https://bit.ly/2Tbxcbp" target="_blank">resume</a></li>
                         <li class="navbar__list-item menu-active"><a href="work">work</a></li>
                         <li class="navbar__list-item"><a href="process">design process</a></li>
                         <li class="navbar__list-item"><a href="contact">contact</a></li>
@@ -56,7 +58,9 @@
                         <span></span>
                     </div>
                     <ul class="mobile-navbar-menu" id="mobile-nav-menu">
-                        <li class="navbar__list-item"><a href="https://www.dropbox.com/s/7e1xewr6rymzy6r/Akachi_Eunice_Ogbonna.pdf?dl=0"  target="_blank">resume</a></li>
+                        <li class="navbar__list-item"><a
+                                href="https://www.dropbox.com/s/7e1xewr6rymzy6r/Akachi_Eunice_Ogbonna.pdf?dl=0"
+                                target="_blank">resume</a></li>
                         <li class="navbar__list-item"><a href="work">work</a></li>
                         <li class="navbar__list-item"><a href="process">design process</a></li>
                         <li class="navbar__list-item"><a href="contact">contact</a></li>
@@ -75,59 +79,61 @@
 
             </div>
         </div>
-        <div class="work-item-con">
-            <div class="work-item-wrap">
-                <div class="work-item-frame">
-                    <a href="insightful">
-                        <div class="work-item">
-                            <img src="img/insightful-mock.png">
+        <div class="work-contact-main-con">
+            <div class="work-item-con">
+                <div class="work-item-wrap">
+                    <div class="work-item-frame">
+                        <a href="insightful">
+                            <div class="work-item">
+                                <img src="img/insightful-mock.png">
 
-                            <div class="work-item-overlay">
-                                <div class="work-item--textbox">
-                                    <h2 class="work-item--title">Insightful</h2>
-                                    <p class="work-item--desc">Simple branding</p>
+                                <div class="work-item-overlay">
+                                    <div class="work-item--textbox">
+                                        <h2 class="work-item--title">Insightful</h2>
+                                        <p class="work-item--desc">Simple branding</p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </a>
-                </div>
+                        </a>
+                    </div>
 
-                <div class="work-item-frame">
-                    <a href="domicilio">
-                        <div class="work-item">
-                            <img src="img/domicillio-mock.png">
+                    <div class="work-item-frame">
+                        <a href="domicilio">
+                            <div class="work-item">
+                                <img src="img/domicillio-mock.png">
 
-                            <div class="work-item-overlay">
-                                <div class="work-item--textbox">
-                                    <h2 class="work-item--title">Domicilio</h2>
-                                    <p class="work-item--desc">Simple branding</p>
+                                <div class="work-item-overlay">
+                                    <div class="work-item--textbox">
+                                        <h2 class="work-item--title">Domicilio</h2>
+                                        <p class="work-item--desc">Simple branding</p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </a>
+                        </a>
+                    </div>
                 </div>
             </div>
-        </div>
+            <div class="work-item-con">
+                <div class="work-item-wrap work-item-wrap--lone">
+                    <div class="work-item-frame">
+                        <a href="maptrack">
+                            <div class="work-item">
+                                <img src="img/maptrack-bcard-gr.png">
 
-        <div class="work-item-con">
-            <div class="work-item-wrap work-item-wrap--lone" >
-                <div class="work-item-frame">
-                    <a href="maptrack">
-                        <div class="work-item">
-                            <img src="img/maptrack-bcard-gr.png">
-
-                            <div class="work-item-overlay">
-                                <div class="work-item--textbox">
-                                    <h2 class="work-item--title">MapTrack</h2>
-                                    <p class="work-item--desc">Re-branding & UI redesign</p>
+                                <div class="work-item-overlay">
+                                    <div class="work-item--textbox">
+                                        <h2 class="work-item--title">MapTrack</h2>
+                                        <p class="work-item--desc">Re-branding & UI redesign</p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </a>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </body>
 <script type="text/javascript" src="js/script.js"></script>
+
 </html>
